cli almost complete location and radius added

--- a/charlesClient/Messenger_ZeroCopy/Messenger_ZeroCopy_Publisher.vcxproj
+++ b/charlesClient/Messenger_ZeroCopy/Messenger_ZeroCopy_Publisher.vcxproj
@@ -221,7 +221,7 @@
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(ACE_ROOT);$(TAO_ROOT);..\..\..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ACE_ROOT);$(TAO_ROOT);..\..\..;C:\Users\lilc1\dev\OpenDDS-3.18.1\DevGuideExamples\DCPS\Messenger_ZeroCopy\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_DEBUG;WIN32;_CONSOLE;_CRT_NONSTDC_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_WARNINGS;MPC_LIB_MODIFIER="d";CURL_STATICLIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -574,11 +574,15 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="dist\jsoncpp.cpp" />
     <ClCompile Include="Publisher.cpp">
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\libcurl\curl\builds\libcurl-vc-x86-release-static-ipv6-sspi-schannel\include\curl\curl.h" />
     <ClInclude Include="DataReaderListenerImpl.h" />
+    <ClInclude Include="dist\json\json-forwards.h" />
+    <ClInclude Include="dist\json\json.h" />
     <ClInclude Include="MessengerC.h" />
     <ClInclude Include="MessengerS.h" />
     <ClInclude Include="MessengerTypeSupportC.h" />
