--- a/charlesClient/Messenger_ZeroCopy/Messenger_ZeroCopy_Publisher.vcxproj.filters
+++ b/charlesClient/Messenger_ZeroCopy/Messenger_ZeroCopy_Publisher.vcxproj.filters
@@ -25,6 +25,9 @@
     <ClCompile Include="Publisher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dist\jsoncpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataReaderListenerImpl.h">
@@ -49,6 +52,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MessengerTypeSupportS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\libcurl\curl\builds\libcurl-vc-x86-release-static-ipv6-sspi-schannel\include\curl\curl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dist\json\json-forwards.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dist\json\json.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
