--- a/charlesClient/Messenger_ZeroCopy/Messenger_ZeroCopy_Publisher.vcxproj.filters
+++ b/charlesClient/Messenger_ZeroCopy/Messenger_ZeroCopy_Publisher.vcxproj.filters
@@ -25,7 +25,7 @@
     <ClCompile Include="Publisher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="dist\jsoncpp.cpp">
+    <ClCompile Include="..\..\..\..\jsoncpp\dist\jsoncpp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -54,13 +54,10 @@
     <ClInclude Include="MessengerTypeSupportS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\libcurl\curl\builds\libcurl-vc-x86-release-static-ipv6-sspi-schannel\include\curl\curl.h">
+    <ClInclude Include="..\..\..\..\jsoncpp\dist\json\json.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="dist\json\json-forwards.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="dist\json\json.h">
+    <ClInclude Include="..\..\..\..\jsoncpp\dist\json\json-forwards.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
